--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,15 @@
 {
-    "devCommand": "uvicorn API:app --host 0.0.0.0 --port 3000",
+    "devCommand": "uvicorn api:app --host 0.0.0.0 --port 3000",
     "builds": [
       {
-        "src": "API.py",
+        "src": "api.py",
         "use": "@vercel/python"
       }
     ],
     "routes": [
       {
         "src": "/(.*)",
-        "dest": "API.py"
+        "dest": "api.py"
       }
     ]
   }
